# eternal-word

./: .env.example  .gitignore  .ripgrepignore  Anchor.toml  CLAUDE.md  Dockerfile.build  LICENSE  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  sst.config.ts  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
apps/api/: package.json  tsconfig.json
apps/web/: package.json
data/: merkle-root.json  test-fixtures.json
data/canonical-text/: 01-genesis.json  02-exodus.json  03-leviticus.json  04-numbers.json  05-deuteronomy.json  06-joshua.json  07-judges.json  08-ruth.json  09-1samuel.json  10-2samuel.json  11-1kings.json  12-2kings.json  13-1chronicles.json  14-2chronicles.json  15-ezra.json  16-nehemiah.json  17-esther.json  18-job.json  19-psalms.json  20-proverbs.json  21-ecclesiastes.json  22-song-of-solomon.json  23-isaiah.json  24-jeremiah.json  25-lamentations.json  26-ezekiel.json  27-daniel.json  28-hosea.json  29-joel.json  30-amos.json  31-obadiah.json  32-jonah.json  33-micah.json  34-nahum.json  35-habakkuk.json  36-zephaniah.json  37-haggai.json  38-zechariah.json  39-malachi.json  40-matthew.json  (+27 more)
docs/architecture/: OVERVIEW.md  STACK.md
docs/conventions/: CODE_STYLE.md  UBIQUITOUS_LANGUAGE.md
docs/decisions/: 2026-07-18_conta-por-versiculo-vs-por-capitulo.md  2026-07-18_extensibilidade-conteudo-editorial.md  (+24 more)
programs/eternal-word/: Cargo.toml
programs/eternal-word/src/: constants.rs  error.rs  instructions.rs  lib.rs  merkle.rs  state.rs
programs/eternal-word/src/instructions/: initialize_book_roots.rs  initialize_config.rs  load_chapter_root.rs  register_verse.rs  seal.rs
programs/eternal-word/tests/: merkle_fixtures.rs  program_flow.rs
scripts/: bootstrap-devnet.ts  build-canonical-text.mjs  onboarding.sh  package.json  smoke-devnet.ts  smoke-indexer.ts  spike-pg00-transaction-budget.ts  sync-idl.ts  tsconfig.json
sprints/: ROADMAP.md
(+17 files in other folders)
