[package]
name = "eternal-word"
version = "0.1.0"
description = "Permanent on-chain registry of Bible verses — one account per verse"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "eternal_word"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.0"
# sha256 syscall — the Merkle verification must match packages/catalog exactly.
solana-sha256-hasher = "3.1.0"

[dev-dependencies]
# anchor-lang here too: the tests serialize Config/BookRoots to seed a sealed
# canon directly, instead of driving 1,189 load transactions to reach `sealed`.
anchor-lang = "1.0.0"
litesvm = "0.10.0"
serde_json = "1.0"
solana-account = "3"
solana-clock = "3"
solana-instruction = "3"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-pubkey = "3"
solana-sha256-hasher = "3.1.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.2"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
